Changes in 4.0.3:
- Fix bug causing wrong encoding to be used when the default save location of a group is read (244873)
- Fix crash in QueueManagerWidget when moving torrents in the queue

Changes in 4.0.2:
- Fix wrong X-KDE-PluginInfo-Name in ktzeroconfplugin.desktop
- Fix crash caused by 0 pointer in webinterface plugin (242273)
- Increase auto update retry interval of ipfilter plugin to 15 minutes
- Fix bug causing groups file to grow very large over time (243182)

Changes in 4.0.1:
- Make sure that the proper encoding is used when loading syndication filters
- Display filename if TagLib doesn't know the title of a file in the mediaplayer plugin
- Fix memory leak in plasma dataengine (238948)
- Use routers XML file URL to distinguish between UPnP routers
- Make sure that there are no uncaught exceptions (223243)

Changes in 4.0:
- In Core::onExit shutdown TCP and UTP servers a bit later to prevent crashes

Changes in 4.0rc1:
- Split of libbtcore as libktorrent
- Make sure that QM handles max share ratio and max seed time a bit better
- Clear selection of ActivityListWidget before selecting the current item (233289)
- When a torrent row is double clicked open the data directory (230618)
- Switch to new style tray icon (210811,233422)
- Make sure that state is set to active when rendering progress bar in ViewDelegate (232727)
- Suspend KTorrent -> Suspend Torrents to avoid confusion (233421)
- Workaround memory leak in krosspython by not passing QObject pointers as arguments to callMethod (223885, 226924)
- Make move on completion a per torrent feature
- Make compiling plasma applet dependant on Qt version 
- Make sure extenders can be resized
- Make sure float is not used in scripting api, doesn't seem to work with python scripts
- Add dbus functions to set and get the maximum and current share ratio and seed time 

Changes in 4.0beta2:
- Use proper KDE function to format date in syndication plugin
- Make sure HTMLPart uses proper charset when rendering page